AASM, campos no editables

--- a/app/views/personas/_form.html.erb
+++ b/app/views/personas/_form.html.erb
@@ -26,15 +26,24 @@
   <div class="panel-body">
     <div class="col-xs-6 ">
       <%= f.label :cedula%>
+      <%if @editable %>
       <div class="form-group input-group">
         <span class="input-group-addon">
           <span class="fa fa-user"></span>
         </span>
+
         <span class="input-group-addon">
+        
           <%= f.select(:tipo_de_cedula, options_for_select($dic["tipos_de_cedula"], @persona.tipo_de_cedula),{},:class =>"",REQUIRED: "" ) %>
         </span>
         <%= f.telephone_field :cedula ,:class => "form-control",label: false, error: "Campo obligarotio.",maxlength: "8", pattern:"[0-9]{8}",REQUIRED: "", autofocus: "" %>
+
       </div>
+            <%else %>
+          </br>
+      <span class="fa fa-user"></span>
+      <%= $dic["tipos_de_cedula"].key(f.object.tipo_de_cedula) + f.object.cedula%>
+      <%end%>
     </div>
     <div class="col-xs-6 form-group">
       <%= f.label "Fotografia" %><br>
@@ -111,15 +120,6 @@
       </div>
     </div>
 
-    <div class="col-xs-6 form-group">
-      <%= f.label :status %>
-      <div class="form-group input-group">
-        <span class="input-group-addon">
-          <span class="fa fa-check"></span>
-        </span>
-        <%= f.select(:status, options_for_select($dic["status"], @persona.status),{}, :class =>"form-control",REQUIRED: "")  %>
-      </div>
-    </div>
     <div class="col-xs-6">
       <%= f.label :cargo_id %><br>
       <div class="form-group input-group">
