--- a/app/views/personas/index.html.erb
+++ b/app/views/personas/index.html.erb
@@ -9,10 +9,10 @@
   <div class="col-md-12 col-sm-12">
     <ul class="nav nav-tabs">
       <li class="active">
-        <a href="#activos" data-toggle="tab">Activos</a>
+        <a href="#activos" data-toggle="tab">Activos (<%= Persona.activo.length %>)</a>
       </li>
       <li class="">
-        <a href="#retirados" data-toggle="tab">Retirados</a>
+        <a href="#retirados" data-toggle="tab">Retirados (<%= Persona.retirado.length %>)</a>
       </li>
     </ul>
 
