--- a/app/views/personas/show.html.erb
+++ b/app/views/personas/show.html.erb
@@ -12,6 +12,7 @@
       </button>
       <ul class="dropdown-menu">
         <li><%= link_to 'Editar', edit_persona_path(@persona)%></li>
+        <li><%= link_to 'Jubilarse', jubilarse_persona_path(@persona),class: "fa fa-trash", method: :post, data: { confirm: 'Esta seguro?' } %></li>
         <li><%= link_to 'Regresar', personas_path%></li>
       </ul>
     </div>
@@ -29,7 +30,7 @@
   <span class="pull-left">
     <strong class="">status</strong>
   </span>
-  <%= $dic["status"].key(@persona.status) %></li>
+  <%= @persona.status %></li>
 <li class="list-group-item text-right">
   <span class="pull-left">
     <strong class="">Departamento</strong>
