--- a/app/views/layouts/_menu.html.erb
+++ b/app/views/layouts/_menu.html.erb
@@ -23,10 +23,6 @@ font-size: 16px;">
     <%=
     link_to "Iniciar sesion", new_usuario_session_path, class:"btn btn-danger square-btn-adjust"
     %>
-    <%=
-    link_to "Registrarse", new_usuario_registration_path, class:"btn btn-danger square-btn-adjust"
-
-     %>
     <%end %>
     </div>
   </nav>
@@ -37,7 +33,7 @@ font-size: 16px;">
         <li class="text-center">
           <img src="/assets/find_user.png" class="user-image img-responsive"/>
         </li>
-
+<%if usuario_signed_in?%>
         <li>
           <%= link_to raw("<i class=\"fa fa-home fa-2x\"></i> INICIO"), welcome_index_path%>
         </li>
@@ -105,6 +101,7 @@ font-size: 16px;">
             <i class="fa fa-square-o fa-2x"></i>
             Blank Page</a>
         </li>
+        <%end %>
       </ul>
 
     </div>
