--- a/app/views/conceptospersonales/_form.html.erb
+++ b/app/views/conceptospersonales/_form.html.erb
@@ -29,7 +29,7 @@
       <span class="fa fa-arrow-up"></span>
       <span class="fa fa-arrow-down"></span>
     </span>
-    <%= f.select(:tipo_de_concepto , options_for_select($dicc["tipos_de_conceptos"],@conceptopersonal.tipo_de_concepto),{include_blank:'Seleccione Tipo de Concepto...'},:class =>"form-control", REQUIRED: "")  %>
+    <%= f.select(:tipo_de_concepto , options_for_select($dic["tipos_de_conceptos"],f.object.tipo_de_concepto),{include_blank:'Seleccione Tipo de Concepto...'},:class =>"form-control", REQUIRED: "")  %>
   </div>
 
 </div>
