--- a/app/views/conceptospersonales/show.html.erb
+++ b/app/views/conceptospersonales/show.html.erb
@@ -7,7 +7,7 @@
 
 <p>
   <strong>Tipo de concepto:</strong>
-  <%= $dicc["tipos_de_conceptos"].key(@conceptopersonal.tipo_de_concepto) %>
+  <%= $dic["tipos_de_conceptos"].key(@conceptopersonal.tipo_de_concepto) %>
 </p>
 
 <%= link_to 'Edit', edit_conceptopersonal_path(@conceptopersonal) %> |
