--- a/app/views/personas/_form.html.erb
+++ b/app/views/personas/_form.html.erb
@@ -29,9 +29,11 @@
       <li class="">
         <a href="#familiares" data-toggle="tab">Familia</a>
       </li>
+      <% if Conceptopersonal.all.length>0%>
       <li class="">
         <a href="#conceptospersonales" data-toggle="tab">Conceptos Personales</a>
       </li>
+      <%end%>
     </ul>
 
     <div class="tab-content">
