--- a/app/views/personas/_personas.html.erb
+++ b/app/views/personas/_personas.html.erb
@@ -17,7 +17,7 @@
       <% p.each do |persona| %>
       <tr>
         <td><%= $dic["tipos_de_cedula"].key(persona.tipo_de_cedula) + persona.cedula%></td>
-        <td><%= persona.nombres+" "+persona.apellidos %></td>
+        <td><%= persona.nombres.capitalize+" "+persona.apellidos.capitalize %></td>
         <td><%= persona.cargo.departamento.nombre %></td>
         <td><%= persona.cargo.nombre %></td>
         <td><%= persona.cargo.sueldos.last.monto %></td>
