--- a/app/views/cargos/index.html.erb
+++ b/app/views/cargos/index.html.erb
@@ -1,4 +1,3 @@
-<p id="notice"><%= notice %></p>
 <div class="page-header">
   <div class="pull-right">
     <%= link_to "Nuevo Cargo",new_cargo_path, class: "btn btn-danger"  %>
@@ -9,6 +8,7 @@
   <div class="panel-heading">
     Lista de Cargos
   </div>
+  <%if Cargo.all.length>0%>
   <div class="panel-body">
     <div class="table-responsive">
       <table class="table table-bordered table-condensed table-responsive table-bordered">
@@ -44,4 +44,9 @@
       <%= paginate @cargos %>
     </div>
   </div>
+  <%elsif%>
+  <div class="actions">
+    <h4>"No hay cargos disponibles"</h4>
+  </div>
+  <%end%>
 </div>
