--- a/app/views/personas/show.html.erb
+++ b/app/views/personas/show.html.erb
@@ -49,9 +49,14 @@
     <%= @persona.cargo.nombre.capitalize%></li>
   <li class="list-group-item text-right">
     <span class="pull-left">
-      <strong class="">Sueldo base</strong>
+      <strong class="">Sueldo Normal</strong>
     </span>
     <%= @persona.cargo.sueldos.last.monto%></li>
+    <li class="list-group-item text-right">
+      <span class="pull-left">
+        <strong class="">Sueldo Integral</strong>
+      </span>
+      <%= @persona.sueldo_integral%></li>
   <li class="list-group-item text-right">
     <span class="pull-left">
       <strong class="">Cedula</strong>
