--- a/app/views/personas/index.html.erb
+++ b/app/views/personas/index.html.erb
@@ -20,30 +20,41 @@
     </ul>
 
     <div class="tab-content">
-      <div class="tab-pane fade active in" id="activos">
-        <div class = "sort_paginate_ajax"><%= render 'personas', :p => @personas %></div>
-      </div>
-      <div class="tab-pane fade" id="suspendidos">
-        <div class = "sort_paginate_ajax_suspendidos"><%= render 'personas', :p => @personas_suspendidas %></div>
-      </div>
-      <div class="tab-pane fade" id="retirados">
-      <div class = "sort_paginate_ajax_retirados"><%= render 'personas', :p => @personas_retiradas %></div>
 
+      <div class="tab-pane fade active in" id="activos">
+        <div class="sort_paginate_ajax">
+          <%= render 'personas', :p => @personas %>
+        </div>
       </div>
+
+      <div class="tab-pane fade" id="suspendidos">
+        <div class="sort_paginate_ajax_suspendidos">
+          <%= render 'personas', :p => @personas_suspendidas %>
+        </div>
+      </div>
+
+      <div class="tab-pane fade" id="retirados">
+        <div class="sort_paginate_ajax_retirados">
+          <%= render 'personas', :p => @personas_retiradas %>
+        </div>
+      </div>
+
     </div>
   </div>
 </div>
 <script>
-var classes=".sort_paginate_ajax th a, .sort_paginate_ajax .pagination a, .sort_paginate_ajax_retirados th a, .sort_paginate_ajax_retirados .pagination a, .sort_paginate_ajax_suspendidos th a, .sort_paginate_ajax_suspendidos .pagination a";
+  var classes = ".sort_paginate_ajax th a, .sort_paginate_ajax .pagination a, .sort_paginate_ajax_retirados th a, .sort_paginate_ajax_retirados .pagination a, .sort_paginate_ajax_suspendidos th a, .sort_paginate_ajax_suspendidos .pagination a";
 
-$(function() {
-  $('a[data-toggle="tab"').on('shown.bs.tab', function(){
+  $(function () {
+    $('a[data-toggle="tab"').on('shown.bs.tab', function () {
 
-    $.getScript("/personas?page=1");
-    return false;
+      $.getScript("/personas?page=1");
+      return false;
+    });
+
+    $(classes).click(function () {
+      $.getScript(this.href);
+      return false;
+    });
   });
-
-  $(classes).click(function(){$.getScript(this.href); return false;} );
-});
-
 </script>
